LetsLearn/Jan2k24/Kubernetes/Ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: colors-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
  - hosts:
    - my-minikube-colors.com
#    - myminigrafana.com
    secretName: my-minikube-colors-tls
  rules:
  - host: my-minikube-colors.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: blue-service
            port:
              number: 8080
      - path: /green
        pathType: Prefix
        backend:
          service:
            name: green-service
            port:
              number: 8080
  - host: mymini-grafana.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: grafana-service
            port:
              number: 80
